--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
     <div class="item active" >
 
 
-    <div class ="slide1"> <img class ="slajdr" src="slike/slajdr/DSCN3945OBR.jpg"> </div>
+    <div class ="slide1"> <img class ="slajdr" src="slike/slajdr/dscn3945obr.jpg"> </div>
     <div class="carousel-caption">
       <h1 class="naslovCar">Društvo za raziskovanje jam Kranj</h1>
       
     </div>
   </div>
   <div class="item">
-  <div class="slide1"> <img class ="slajdr" src="slike/slajdr/DSC_0288.JPG"> </div>
+  <div class="slide1"> <img class ="slajdr" src="slike/slajdr/dsc_0288.jpg"> </div>
   <div class="carousel-caption">
     <h1 class="naslovCar">Društvo za raziskovanje jam Kranj</h1>
     
   </div>
   </div>
   <div class="item">
-  <div class="slide1"> <img class ="slajdr" src="slike/slajdr/DSC_0249.JPG"> </div>
+  <div class="slide1"> <img class ="slajdr" src="slike/slajdr/dsc_0249.jpg"> </div>
   <div class="carousel-caption">
   <h1 class="naslovCar">Društvo za raziskovanje jam Kranj</h1>
   
@@ -188,7 +188,7 @@
       </div>
       <div class="modal-body">
         <p id="popupText">Some text in the modal.</p>
-        <img id="mod1" class="modalImg" src="slike/modal/raziskovanje.JPG" width="530">
+        <img id="mod1" class="modalImg" src="slike/modal/raziskovanje.jpg" width="530">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Zapri</button>
@@ -206,7 +206,7 @@
 		document.getElementById("popupNaslov").innerHTML="Raziskovanje";
 		document.getElementById("popupText").innerHTML=" Ena glavnih nalog jamarskega društva je raziskovanje - tako podzemlja kot površja. ";
 		var slika1=document.getElementById('mod1');
-		slika1.src="slike/modal/raziskovanje.JPG";
+		slika1.src="slike/modal/raziskovanje.jpg";
 	}
 	function zoom1(){
 		document.getElementById("popupNaslov").innerHTML="Dokumentiranje";
