--- a/zgodovina-en.html
+++ b/zgodovina-en.html
@@ -107,7 +107,7 @@
 			</div>
 		</div>
 			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-aos="fade-left">
-				<img class="zgoImg" src="slike/zgodovina/lobanja.JPG" height="350" width="615">
+				<img class="zgoImg" src="slike/zgodovina/lobanja.jpg" height="350" width="615">
 			</div>
 			<div class="clearfix visible-md"></div>
 		<div class="borderFix col-lg-6 col-md-6 col-sm-12 col-xs-12" data-aos="fade-right">
