--- a/index-en.html
+++ b/index-en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sl">
+<html lang="en">
 <head>
 	<title>DZRJK | Home</title>
 	<meta charset="utf-8">
@@ -208,7 +208,7 @@
 	}
 	function zoom1(){
 		document.getElementById("popupNaslov").innerHTML="Document";
-		document.getElementById("popupText").innerHTML=" When a club finds a cave, it needs to measure it's depth, take some pictures an register it. ";
+		document.getElementById("popupText").innerHTML=" When a club finds a cave, it needs to measure it's depth, take some pictures and register it. ";
 		var slika1=document.getElementById('mod1');
 		
 		slika1.src="slike/modal/dokumentiramo.jpg";
@@ -219,14 +219,14 @@
 		var popupNaslov=document.getElementById("popupNaslov");
 		var slika1=document.getElementById('mod1');
 		popupNaslov.innerHTML="Learn";
-		document.getElementById("popupText").innerHTML=" Our club is alway recieving <a href='sola.html' target='blank'>new members</a>, who need to be trained in cave exploration skills. ";
+		document.getElementById("popupText").innerHTML=" Our club is always recieving <a href='sola.html' target='blank'>new members</a>, who need to be trained in cave exploration skills. ";
 		slika1.src="slike/modal/seucimo.jpg";
 		
 	}
 	function zoom3(){
 		document.getElementById("popupNaslov").innerHTML="Others";
 		var slika1=document.getElementById('mod1');
-		document.getElementById("popupText").innerHTML=" DZRJK is also active on other fields of expertise (events,cleaning,other sports...). ";
+		document.getElementById("popupText").innerHTML=" DZRJK is also active on other fields of expertise (events, cleaning, other sports...). ";
 		slika1.src="slike/modal/druge_dejavnosti.jpg";
 	}
 	
